<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_task_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_task_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_task_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ID" />

        <eu.tsvetkov.rabota.view.DateTimeTextView
            android:id="@+id/text_task_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_task_starts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_task_id"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_task_starts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/starts" />

        <eu.tsvetkov.rabota.view.DateTimeTextView
            android:id="@+id/text_task_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_task_ends"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_task_starts"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_task_ends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ends" />

        <eu.tsvetkov.rabota.view.DateTimeTextView
            android:id="@+id/text_task_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_task_duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_task_ends"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_task_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/duration" />

        <eu.tsvetkov.rabota.view.DurationTextView
            android:id="@+id/text_task_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_task_parts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_ok"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layout_task_duration"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label_task_parts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_parts" />

        <fragment
            android:id="@+id/fragment_task_parts_list"
            android:name="eu.tsvetkov.rabota.fragment.TaskPartsListFragment"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/ok" />

</RelativeLayout>